--- a/app/templates/add_student.html
+++ b/app/templates/add_student.html
@@ -13,6 +13,9 @@
 <div class="row justify-content-center">
     <div class="col-md-8">
         <form method="POST">
+            <!-- Add CSRF Token -->
+            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
+            
             <div class="mb-3">
                 <label>Student Name</label>
                 <input type="text" name="student_name" class="form-control" required>
@@ -31,7 +34,22 @@
             </div>
             <div class="mb-3">
                 <label>Class</label>
-                <input type="text" name="student_class" class="form-control" required>
+                <select name="student_class" class="form-control" required>
+                    <option value="">Select Class</option>
+                    <option value="NUR">NURSERY</option>
+                <option value="LKG">LKG</option>
+                <option value="UKG">UKG</option>
+                <option value="1">1st Class</option>
+                <option value="2">2nd Class</option>
+                <option value="3">3rd Class</option>
+                <option value="4">4th Class</option>
+                <option value="5">5th Class</option>
+                <option value="6">6th Class</option>
+                <option value="7">7th Class</option>
+                <option value="8">8th Class</option>
+                <option value="9">9th Class</option>
+                <option value="10">10th Class</option>
+                </select>
             </div>
             <div class="mb-3">
                 <label>Village</label>
