--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -12,6 +12,7 @@
     <div class="row justify-content-center">
         <div class="col-md-6">
             <form method="POST">
+                <input type="hidden" name="csrf_token" value="{{ csrf_token }}">
                 <div class="mb-3">
                     <label>Name</label>
                     <input type="text" name="name" class="form-control" required />
