--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -12,22 +12,23 @@
     <div class="row justify-content-center">
         <div class="col-md-6">
             <form method="POST">
-                <input type="hidden" name="csrf_token" value="{{ csrf_token }}">
+                {{ form.csrf_token }}
+                
                 <div class="mb-3">
                     <label>Name</label>
-                    <input type="text" name="name" class="form-control" required />
+                    {{ form.name(class="form-control", required=True) }}
                 </div>
                 <div class="mb-3">
                     <label>Email address</label>
-                    <input type="email" name="email" class="form-control" required />
+                    {{ form.email(class="form-control", required=True) }}
                 </div>
                 <div class="mb-3">
                     <label>Password</label>
-                    <input type="password" name="password" class="form-control" required />
+                    {{ form.password(class="form-control", required=True) }}
                 </div>
                 <div class="mb-3">
                     <label>Mobile Number</label>
-                    <input type="text" name="mobile_number" class="form-control" required />
+                    {{ form.mobile_number(class="form-control", required=True) }}
                 </div>
                 <div class="d-grid gap-2">
                     <button type="submit" class="btn btn-success">Sign Up</button>
